@@ -29,7 +29,7 @@ module Fairy
 ##CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
 
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
-CONF.PREQUEUING_POLICY = {:queuing_class => :PoolQueue}
+  CONF.PREQUEUING_POLICY = {:queuing_class => :PoolQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemorySizedQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
@@ -39,7 +39,7 @@ CONF.PREQUEUING_POLICY = {:queuing_class => :PoolQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 
 ##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
-  CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 40000
+  CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 160000
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
   CONF.POOLQUEUE_POOL_THRESHOLD = 32000
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 320000
@@ -88,6 +88,7 @@ CONF.PREQUEUING_POLICY = {:queuing_class => :PoolQueue}
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
 ##CONF.DEBUG_MONITOR_ON = false
+#CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
 ##CONF.DEBUG_BUG49 = false
 #CONF.DEBUG_BUG49 = true
