@@ -291,6 +291,7 @@ Log::debug(self, "TERMINATE: #5")
 #	assign_processor(bjob, :NEW_PROCESSOR, &block)
       when BSplitter
 	assign_processor(bjob, :NEW_PROCESSOR, &block)
+#	assign_processor(bjob, :NEW_PROCESSOR_N, input_bjob, &block)
       else
 	assign_processor(bjob, :SAME_PROCESSOR, input_njob.processor, &block)
       end
